test/experiments/errors/errorTypes/tryCatchWrapped.js
/* eslint-disable */

tryCatchAndReport(function() {
  throw new Error('This is an expected runtime error within setTimeout');
});
